# OpenLogTool

./: .gitignore  BUILD_CONFIG.md  LICENSE  README.md  analysis_options.yaml  build_all.sh  flutter_rust_bridge.yaml  index.html  l10n.yaml  pubspec.yaml  test_app.dart  update_icons.sh
.github/: dependabot.yml
android/: local.properties
android/app/: build.gradle  (+1 more)
docs/: ai-speech-recognition.md
lib/: main.dart
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: callsign_qth.rs  collaboration.rs  database.rs  dictionaries.rs  export.rs  logs.rs  mod.rs  personal_cloud.rs  personal_dictionary.rs  personal_records.rs  sessions.rs  settings.rs
rust/src/db/: callsign_qth.rs  collaboration.rs  live_draft.rs  logs.rs  migrations.rs  mod.rs
rust/src/dict/: search.rs
rust/src/models/: callsign_qth_record.rs  collaboration.rs  dict_item.rs  live_draft.rs  log_entry.rs  mod.rs  session.rs
rust/tests/: collaboration_backup.rs  collaboration_conflict_resolution.rs  collaboration_live_draft.rs  collaboration_rejected_recovery.rs  collaboration_replica.rs  collaboration_snapshot.rs  collaboration_write_guards.rs  dictionary_ai.rs  dictionary_atomic_import.rs  dictionary_deletion.rs  dictionary_rename.rs  local_log_write_guards.rs  log_restore.rs  personal_dictionary_cloud.rs  personal_records.rs
test/: app_theme_test.dart  widget_test.dart
tool/: build_rust_android.sh  build_rust_macos.sh  bump_version.dart  gen_version.dart  package_windows.ps1
web/: index.html  manifest.json
windows/: CMakeLists.txt  installer.iss
(+262 files in other folders)
