[package]
name = "openlogtool_core"
version = "2.6.1-R"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
rand = "0.8"
sha2 = "0.10"
once_cell = "1"
log = "0.4"
